welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: not found: value baggle
	if(baggle < 3){
           ^