welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while(!sortieTrouvee){
	do{
		var baggle = 0;
		if(estSurBiscuit){
			baggle = baggle + 1;
		}
		avance();
	}while(croisement())
	if(baggle < 3){
		gauche();
	}else{
		droite();
	}	
}
avance()
